welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:3: error: reassignment to val
  if (a=10){return true};
       ^makes10:4: error: reassignment to val
  if (b=10){return true};
       ^